fix: corrige overflow do card do gráfico

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -47,6 +47,9 @@ body {
     border-radius: 8px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
+#grafico {
+    overflow-x: scroll;
+}
 
 /* Estilo para os botões */
 button {
